# checkmk

./: .bazelrc  BUILD  Cargo.toml  MODULE.bazel  Makefile  PSScriptAnalyzerSettings.psd1  community-requirements.txt  constraints.txt  go.mod  host.Cargo.lock.bazel  module_layers.toml  pyproject.toml  requirements.txt  runtime-requirements.txt  site.Cargo.lock.bazel
.aspect/cli/: config.yaml
.claude/: settings.json
.github/: dependabot.yml
.paseo/: setup-claude-firejail.sh
.werks/: 16920.md  16926.md  16927.md  18495.md  18498.md  18755.md  18756.md  19141.md  19219.md  19220.md  19251.md  19327.md  19328.md  19478.md  19479.md  19541.md  19542.md  19580.md  19619.md  19713.md  19734.md  19735.md  19829.md  19905.md  19950.md  19966.md  19976.md  20003.md  20004.md  20016.md  20020.md  20021.md  20022.md  20030.md  20037.md  20039.md  20040.md  20041.md  20051.md  20060.md  (+16 more)
agents/: Makefile
agents/cfg_examples/: docker.cfg
agents/plugins/: mk_docker.py  (+3 more)
agents/wnx/: BUILD.bazel  python_packages.cmd  run.ps1
agents/wnx/extensions/robotmk_ext/: BUILD  Cargo.toml
agents/wnx/extensions/robotmk_ext/src/: main.rs
agents/wnx/scripts/: BUILD  README_AZURE_SIGNING.md  cargo_build_robotmk.cmd  sign_code.cmd  sign_code_azure.ps1  sign_code_fast.cmd
agents/wnx/src/engine/: cma_core.cpp
bazel/cmk/optimize/: BUILD.bazel
bazel/cmk/strip/: BUILD.bazel
cmk/: BUILD  validate_config.py  validate_plugins.py
locale/: output_pot_file
omd/: BUILD  requirements_lock.txt
scripts/: BUILD  OWNERS  check_no_py_test.sh  update_python_libs.py
tests/: BUILD  conftest.py  run_tests.sh
(+1404 files in other folders)
