load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

# Opt into stripping the symbol table for the targets that select() on it.
# Off by default; CI turns it on (see .bazelrc).
bool_flag(
    name = "strip",
    build_setting_default = False,
)

config_setting(
    name = "enabled",
    flag_values = {":strip": "True"},
)
